[tool.poetry]
name = "pubmed-fetcher-shrey"
version = "0.1.0"
description = "Fetch PubMed papers with non-academic biotech/pharma authors"
authors = ["Your Name <youremail@example.com>"]
readme = "README.md"
packages = [
    { include = "pubmed_fetcher", from = "src" },
    
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.32.4"
pandas = "^2.2.2"
typer = "^0.12.5"
lxml = "^5.4.0"

[tool.poetry.scripts]
get-papers-list = "cli.main:main"

[tool.poetry.group.dev.dependencies]
twine = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
